# gatech_deep_learning_final

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_inference.sh  docker-compose.yml  pyproject.toml  setup.cfg
adapticons/: README.md  new_train_requirements.txt
adapticons/modeling/: download_glue.py  glue_training.py  jsonl_to_txt.py  load_fusion_model.py  new_train.py  run_glue_alt.py  run_language_modeling_with_adapter_fusion.py  run_language_modeling_with_adapters.py  sample_pct_txt_file.py
notebooks/: NS_DL_Project_01.ipynb  NS_DL_Project_02.ipynb  NS_DL_Project_04.ipynb  NS_DL_Project_05.ipynb  NS_DL_Project_06.ipynb  NS_DL_Project_07.ipynb  NS_DL_Project_08.ipynb  NS_DL_Project_09.ipynb  NS_DL_Project_10.ipynb  NS_DL_Project_11.ipynb  NS_DL_Project_12.ipynb  jh_colab_train.ipynb  jh_test_train_vs_ft_weights.ipynb  sanity_check.ipynb  similarity_between_tasks.ipynb  test_adapters.ipynb  test_run_LM.ipynb
