[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
use_parentheses = true
line_length = 120
skip = "venv"

[tool.poetry]
name = "adapticons"
version = "0.1.0"
description = "Transformer Adapters"
authors = ["OMSCS deep learning final"]

[tool.poetry.dependencies]
python = "~3.7"
pandas = "0.25.3"
schema = "^0.7.1"
torch = "^1.7.0"
seqeval = "^1.2.2"
rouge-score = "^0.0.4"
sacrebleu = "^1.4.14"
psutil = "^5.7.3"
faiss-cpu = "^1.6.4"
streamlit = "^0.70.0"
pytorch-lightning = "0.8.5"
datasets = "^1.1.2"
conllu = "^4.2.1"
adapter-transformers = "^1.0.1"
apex = "^0.9.10-alpha.0"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.761"
pre-commit = "^2.1.1"
pytest = "^5.3.5"
ipykernel = "^5.1.4"
jupyterlab = "^2.0.0"
ipython = "^7.14.0"
matplotlib = "^3.1.3"
seaborn = "^0.10.0"
tqdm = "^4.43.0"
ipywidgets = "^7.5.1"
jupyter_client = "^6.1.7"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
